# django_snacks

./: .coverage  manage.py  pyproject.toml  readme.md
.github/workflows/: cf.yml
django_snacks/: asgi.py  settings.py  urls.py  wsgi.py
django_snacks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
snacks/: tests.py  urls.py  views.py
templates/: about.html  base.html  home.html
tests/: test_snacks.py
