[tool.poetry]
name = "django_snacks"
version = "0.1.1"
description = "django app to practice inheritance of html components"
authors = ["Lee-Roy King <leeroywking@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
black = "^19.10b0"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
django = "^3.1"
coverage = "^5.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
